--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "typescript": "4.7.3"
   }
 }
