--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.6.6",
     "graphql": "^16.5.0",
     "next": "12.1.6",
+    "nookies": "^2.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-h5-audio-player": "^3.8.4"
