--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "next": "12.1.6",
     "nookies": "^2.5.2",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-h5-audio-player": "^3.8.4"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@types/node": "17.0.40",
@@ -23,7 +22,6 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
-    "eslint-plugin-react-hooks": "^4.5.0",
     "typescript": "4.7.3"
   }
 }
