--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.1.6",
     "nookies": "^2.5.2",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sharp": "^0.30.6"
   },
   "devDependencies": {
     "@types/node": "17.0.40",
