--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nookies": "^2.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-range": "^1.8.13",
     "sharp": "^0.30.6"
   },
   "devDependencies": {
